WIP: Update the sync engine
Add tests throughout.
Add proper use of gemspec file.
Add an rspec file.
Add proper task discovery.
Add initial resolution of labels.
Add executable scripts.
Complete FileSync task to cover all edge cases and display status.
Add IO abstract to simplify code testing.

--- a/applications/powershell.yml
+++ b/applications/powershell.yml
@@ -1,5 +1,5 @@
 name: PowerShell
-labels: <win>
+platforms: ['<win>']
 root: ~\Documents\WindowsPowerShell
 files:
 - Microsoft.PowerShell_profile.ps1
