--- a/applications/powershell.yml
+++ b/applications/powershell.yml
@@ -1,5 +1,5 @@
 name: PowerShell
 platforms: ['<win>']
-root: ~\Documents\WindowsPowerShell
+root: ~/Documents/WindowsPowerShell
 files:
 - Microsoft.PowerShell_profile.ps1
