Fix config files to work xplat
Sync some files like .gitconfig per os.

--- a/applications/git.yml
+++ b/applications/git.yml
@@ -1,4 +1,9 @@
 name: Git
 files:
 - .gitignore
-- .gitconfig
+- <win>:
+    backup_path: _gitconfig(win)
+    restore_path: .gitconfig
+- <mac>:
+    backup_path: _gitconfig(osx)
+    restore_path: .gitconfig
