--- a/applications/bash.yml
+++ b/applications/bash.yml
@@ -4,3 +4,6 @@ files:
 - .bash_profile
 - .bash_functions
 - .bash_aliases
+- <osx>:
+    backup_path: _bash_local(osx)
+    restore_path: .bash_local
